cloudsensei-project-3-mern-book-store-app/template.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: MERN Stack on ECS with Fargate using ALB
Parameters:
  MongoImageURI:
    Type: String
    Description: MongoDB Docker image URI in ECR
  BackendImageURI:
    Type: String
    Description: Backend Docker image URI in ECR
  NginxImageURI:
    Type: String
    Description: Nginx Docker image URI in ECR
Mappings:
  SubnetConfig:
    VPC:
      CIDR: 10.0.0.0/16
    PublicOne:
      CIDR: 10.0.0.0/24
    PublicTwo:
      CIDR: 10.0.1.0/24
    PrivateOne:
      CIDR: 10.0.2.0/24
    PrivateTwo:
      CIDR: 10.0.3.0/24
Resources:
  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: docker-mern-architecture-fargate
  ContainerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access to the containers
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 0
        ToPort: 65535
        SourceSecurityGroupId:
          Ref: ALBSecurityGroup
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Fn::FindInMap:
        - SubnetConfig
        - VPC
        - CIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Fn::FindInMap:
        - SubnetConfig
        - PublicOne
        - CIDR
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs:
            Ref: AWS::Region
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Fn::FindInMap:
        - SubnetConfig
        - PublicTwo
        - CIDR
      AvailabilityZone:
        Fn::Select:
        - 1
        - Fn::GetAZs:
            Ref: AWS::Region
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Fn::FindInMap:
        - SubnetConfig
        - PrivateOne
        - CIDR
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs:
            Ref: AWS::Region
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Fn::FindInMap:
        - SubnetConfig
        - PrivateTwo
        - CIDR
      AvailabilityZone:
        Fn::Select:
        - 1
        - Fn::GetAZs:
            Ref: AWS::Region
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: InternetGateway
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet1
      RouteTableId:
        Ref: PublicRouteTable
  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet2
      RouteTableId:
        Ref: PublicRouteTable
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
  PrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NatGateway1
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PrivateSubnet1
      RouteTableId:
        Ref: PrivateRouteTable1
  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
  PrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NatGateway2
  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PrivateSubnet2
      RouteTableId:
        Ref: PrivateRouteTable2
  NatGatewayEIP1:
    Type: AWS::EC2::EIP
    DependsOn: VPCGatewayAttachment
    Properties:
      Domain: vpc
  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
        - NatGatewayEIP1
        - AllocationId
      SubnetId:
        Ref: PublicSubnet1
  NatGatewayEIP2:
    Type: AWS::EC2::EIP
    DependsOn: VPCGatewayAttachment
    Properties:
      Domain: vpc
  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
        - NatGatewayEIP2
        - AllocationId
      SubnetId:
        Ref: PublicSubnet2
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ALB Security Group
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
  BackendServiceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Backend Service Security Group
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 5000
        ToPort: 5000
        SourceSecurityGroupId:
          Ref: ALBSecurityGroup
  MongoServiceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Mongo Service Security Group
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 27017
        ToPort: 27017
        SourceSecurityGroupId:
          Ref: BackendServiceSecurityGroup
  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: mern-app-load-balancer
      Scheme: internet-facing
      SecurityGroups:
      - Ref: ALBSecurityGroup
      Subnets:
      - Ref: PublicSubnet1
      - Ref: PublicSubnet2
      Type: application
  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    DependsOn:
    - LoadBalancer
    Properties:
      LoadBalancerArn:
        Ref: LoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: TargetGroup
  ALBListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      ListenerArn:
        Ref: ALBListener
      Priority: 1
      Conditions:
      - Field: path-pattern
        Values:
        - /*
      Actions:
      - Type: forward
        TargetGroupArn:
          Ref: TargetGroup
  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn:
    - LoadBalancer
    Properties:
      Name: mern-app-target-group
      Port: 80
      Protocol: HTTP
      TargetType: ip
      VpcId:
        Ref: VPC
  MongoTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: mern-mongo-task
      Cpu: '256'
      Memory: '512'
      NetworkMode: awsvpc
      RequiresCompatibilities:
      - FARGATE
      ExecutionRoleArn:
        Fn::GetAtt:
        - ECSExecutionRole
        - Arn
      ContainerDefinitions:
      - Name: mongo-container
        Image:
          Ref: MongoImageURI
        PortMappings:
        - ContainerPort: 27017
        LogConfiguration:
          LogDriver: awslogs
          Options:
            awslogs-group:
              Ref: CloudWatchLogGroup
            awslogs-region:
              Ref: AWS::Region
            awslogs-stream-prefix: mern-mongo
  BackendTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: mern-backend-task
      Cpu: '256'
      Memory: '512'
      NetworkMode: awsvpc
      RequiresCompatibilities:
      - FARGATE
      ExecutionRoleArn:
        Fn::GetAtt:
        - ECSExecutionRole
        - Arn
      ContainerDefinitions:
      - Name: backend-container
        Image:
          Ref: BackendImageURI
        PortMappings:
        - ContainerPort: 5000
        LogConfiguration:
          LogDriver: awslogs
          Options:
            awslogs-group:
              Ref: CloudWatchLogGroup
            awslogs-region:
              Ref: AWS::Region
            awslogs-stream-prefix: mern-backend
        Environment:
        - Name: DB_HOST
          Value: mongo-service.mern-service-discovery
  NginxTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: mern-nginx-task
      Cpu: '512'
      Memory: '1024'
      NetworkMode: awsvpc
      RequiresCompatibilities:
      - FARGATE
      ExecutionRoleArn:
        Fn::GetAtt:
        - ECSExecutionRole
        - Arn
      ContainerDefinitions:
      - Name: nginx-container
        Image:
          Ref: NginxImageURI
        PortMappings:
        - ContainerPort: 80
        LogConfiguration:
          LogDriver: awslogs
          Options:
            awslogs-group:
              Ref: CloudWatchLogGroup
            awslogs-region:
              Ref: AWS::Region
            awslogs-stream-prefix: mern-nginx
        Environment:
        - Name: LOADBALANCER_DNS_NAME
          Value: backend-service.mern-service-discovery
  CloudWatchLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: /ecs/docker-mern-ecs
  ECSExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ecs-tasks.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: /
      ManagedPolicyArns:
      - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
  ServiceDiscoveryNamespace:
    Type: AWS::ServiceDiscovery::PrivateDnsNamespace
    Properties:
      Name: mern-service-discovery
      Vpc:
        Ref: VPC
  MongoServiceDiscoveryService:
    Type: AWS::ServiceDiscovery::Service
    Properties:
      Name: mongo-service
      NamespaceId:
        Ref: ServiceDiscoveryNamespace
      DnsConfig:
        DnsRecords:
        - Type: A
          TTL: 300
      HealthCheckCustomConfig:
        FailureThreshold: 1
  BackendServiceDiscoveryService:
    Type: AWS::ServiceDiscovery::Service
    Properties:
      Name: backend-service
      NamespaceId:
        Ref: ServiceDiscoveryNamespace
      DnsConfig:
        DnsRecords:
        - Type: A
          TTL: 300
      HealthCheckCustomConfig:
        FailureThreshold: 1
  MongoService:
    Type: AWS::ECS::Service
    Properties:
      Cluster:
        Ref: ECSCluster
      TaskDefinition:
        Ref: MongoTaskDefinition
      DesiredCount: 1
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          Subnets:
          - Ref: PrivateSubnet1
          - Ref: PrivateSubnet2
          SecurityGroups:
          - Ref: MongoServiceSecurityGroup
      ServiceRegistries:
      - RegistryArn:
          Fn::GetAtt:
          - MongoServiceDiscoveryService
          - Arn
  BackendService:
    Type: AWS::ECS::Service
    DependsOn:
    - MongoService
    Properties:
      Cluster:
        Ref: ECSCluster
      TaskDefinition:
        Ref: BackendTaskDefinition
      DesiredCount: 1
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          Subnets:
          - Ref: PrivateSubnet1
          - Ref: PrivateSubnet2
          SecurityGroups:
          - Ref: BackendServiceSecurityGroup
      ServiceRegistries:
      - RegistryArn:
          Fn::GetAtt:
          - BackendServiceDiscoveryService
          - Arn
  NginxService:
    Type: AWS::ECS::Service
    DependsOn:
    - BackendService
    Properties:
      Cluster:
        Ref: ECSCluster
      TaskDefinition:
        Ref: NginxTaskDefinition
      DesiredCount: 1
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          Subnets:
          - Ref: PublicSubnet1
          - Ref: PublicSubnet2
          SecurityGroups:
          - Ref: ALBSecurityGroup
          AssignPublicIp: ENABLED
      LoadBalancers:
      - ContainerName: nginx-container
        ContainerPort: 80
        TargetGroupArn:
          Ref: TargetGroup
Outputs:
  ExternalUrl:
    Description: The URL of the external load balancer
    Value:
      Fn::Sub: http://${LoadBalancer.DNSName}
